<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.myshoppal.ui.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.myshoppal.ui.fragments.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.myshoppal.ui.fragments.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

</navigation>